﻿Legend:
! Breaking change
* Compatible change
- Bugfix
+ New feature
===============================================================================

~~~~~~~~~
* v5.1.0:
~~~~~~~~~

+ KGySoft.Drawing.DebuggerVisualizers.dll
=========================================
+ CustomBitmapSerializationInfoBase class:
  + New AsBitmapData method

- KGySoft.Drawing.DebuggerVisualizers.Wpf.dll
=============================================
- Fixing possible MissingMethodException when the debugged project references KGySoft.Drawing.Core as well, but with
  a different assembly identity.


~~~~~~~~~
! v5.0.0:
~~~~~~~~~

! KGySoft.Drawing.DebuggerVisualizers.Package.x64.dll
=====================================================
! The debugger visualizers now support Visual Studio 2022 extension-based visualizers. They are displayed in a tool
  window instead of the classic dialogs. The tool window can remain open while stepping through the code, and can be
  docked in the Visual Studio IDE. If you prefer the classic dialog, download the 4.6.2 build and use the installer
  of the ImagingTools application.
! The extension requires Visual Studio 2022 version 17.9 Preview 1 or higher. To install the debugger visualizers
  for Visual Studio 2022 version 17.8 or lower, download the 4.6.2 build and use the installer of the ImagingTools
  application.
! The startup code now removes the old debugger visualizers from the Documents\Visual Studio 2022\Visualizers folder
  to avoid conflicts with the new extension-based visualizers. Though if you install them manually, they will be
  preserved if the version number is 5.0.0 or higher.


! KGySoft.Drawing.ImagingTools.exe
==================================
! UI changes:

! Debugger Visualizer Installations dialog:
  ! In the .NET Core and .NET Framework 4.7.2+ builds the classic visualizers cannot be installed anymore.
  * Installing the classic debugger visualizer for Visual Studio 2022 or higher asks for confirmation because the