@@ -14,6 +14,11 @@
 + CustomBitmapSerializationInfoBase class:
   + New AsBitmapData method
 
+- KGySoft.Drawing.DebuggerVisualizers.SkiaSharp.dll
+===================================================
+- Fixing possible MissingMethodException when the debugged project references KGySoft.Drawing.Core as well, but with
+  a different assembly identity.
+
 - KGySoft.Drawing.DebuggerVisualizers.Wpf.dll
 =============================================
 - Fixing possible MissingMethodException when the debugged project references KGySoft.Drawing.Core as well, but with
